# arizona-u12-soccer-rankings

./: .gitignore  API_ERROR_SUMMARY.md  AZ MALE U11 MASTER TEAM LIST.csv  AZ MALE U12 MASTER TEAM LIST.csv  AZ MALE u10 MASTER TEAM LIST.csv  AZ MALE u13 MASTER TEAM LIST.csv  AZ MALE u14 MASTER TEAM LIST.csv  CHANGELOG.md  COMPLETE_SYSTEM_SUMMARY.md  DASHBOARD_README.md  ERROR_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  GOTSPORT_SCRAPER_SUMMARY.md  JAVASCRIPT_SCRAPER_IMPLEMENTATION_SUMMARY.md  LEVEL_2_EXPECTATION_IMPLEMENTATION_SUMMARY.md  Makefile  Matched_Games_BACKUP_20251008_140300.csv  PHASE_4_COMPLETION_REPORT.md  PHASE_4_COMPLETION_SUMMARY.md  PHASE_4_IMPLEMENTATION_COMPLETE.md  PHASE_4_STATUS.md  PHASE_4_VALIDATION_COMPLETE.md  PHASE_4_VALUE_README.md  PHASE_A_B_IMPLEMENTATION_SUMMARY.md  PHASE_C_IMPLEMENTATION_SUMMARY.md  PREDICTIVE_ANALYTICS_ENHANCEMENT_SUMMARY.md  PRODUCTION_RUNBOOK.md  PROJECTED_OUTCOMES_GUIDE.md  PROJECT_SUMMARY.md  Predicted_Outcomes_v52b.csv  RANKINGS_ENGINE_DEEP_ANALYSIS.md  README.md  Ranking_Logs.txt  Rankings.csv  Rankings.parquet  Rankings_AZ_M_2025.parquet  Rankings_AZ_M_U11_2025_v53e.csv  Rankings_AZ_M_u10_2025_v53e.csv  Rankings_AZ_M_u11_2025_v53e.csv  Rankings_AZ_M_u13_2025_v53e.csv  (+199 more)
analytics/: __init__.py  iterative_opponent_strength_v53.py  iterative_opponent_strength_v53_enhanced.py  phase_c1_feature_builders.py  predictive_backbone_v53.py  projected_outcomes_v52b.py
bronze/: az_boys_u10_teams.csv  az_boys_u11_teams.csv  az_boys_u13_teams.csv  az_boys_u14_teams.csv  team_profiles_az_boys_u11.json
data/: divisions.json
(+595 files in other folders)
