[project]
name = "arizona-soccer-rankings"
version = "1.0.0"
description = "Youth soccer rankings system for Arizona"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "networkx>=3.0",
    "streamlit>=1.28",
    "pytest>=7.4",
    "python-dateutil>=2.8",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
